[package]
name = "mashov"
version = "0.1.0"
authors = ["Yan Khachko <a@slnk.icu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
tokio = { version = "0.2", features = ["macros"] }
json = "0.12.4"
mongodb = "1.1.0"
yaml-rust = "0.4"